showing guest list in detalhesConvidado

--- a/src/main/resources/templates/evento/detalhesEvento.html
+++ b/src/main/resources/templates/evento/detalhesEvento.html
@@ -26,6 +26,17 @@
 			<button type="submit" class="waves-effect waves-light btn">Adicionar</button>
 		</form>
 	</div>
+	<div class="container" th:each="convidado: ${convidados}">
+	<h5>Lista de Convidados: </h5>
+		<div class="row">
+		<div class="input-field col s6">
+			<p><span th:text="${convidado.nomeConvidado}"></span></p>
+		</div>
+			<div class="input-field col s3">
+				<p><span th:text="${convidado.rg}"></span></p>
+			</div>
+		</div>
+	</div>
 	
 	<!--JavaScript at end of body for optimized loading-->
       <script type="text/javascript" src="materialize/js/materialize.min.js"/>
