--- a/src/main/resources/templates/evento/detalhesEvento.html
+++ b/src/main/resources/templates/evento/detalhesEvento.html
@@ -20,9 +20,10 @@
 			<p>Data: <span th:text="${evento.data}"></span></p>
 			<p>Horario: <span th:text="${evento.horario}"></span></p>
 		</div>
-		<form method="post">
-			Nome: <input type="text" value="" name="nomeConvidado"/>
-			RG: <input type="text" value="" name="rg"/>
+		<th:block th:include="mensagemValidacao"></th:block>
+		<form method="post" th:object="${convidado}">
+			Nome: <input type="text" value="" name="nomeConvidado" placeHolder="Nome Completo"/>
+			RG: <input type="text" value="" name="rg" class="validate"/>
 			<button type="submit" class="waves-effect waves-light btn">Adicionar</button>
 		</form>
 	</div>
