--- a/src/main/resources/templates/evento/detalhesEvento.html
+++ b/src/main/resources/templates/evento/detalhesEvento.html
@@ -46,11 +46,15 @@
 			<tr>
 				<th>Nome Convidado</th>
 				<th>RG</th>
+				<th>Deletar</th>
 			</tr>
 		<tbody>
 			<tr th:each="convidado : ${convidados}">
 				<td><span th:text="${convidado.nomeConvidado}"></span></td>
 				<td><span th:text="${convidado.rg}"></span></td>
+				<td><a class="waves-effect waves-light btn-small" th:href="${(#mvc.url('EC#deletarConvidado').arg(0,convidado.rg)).build()}">
+				<i class="large material-icons">delete</i>
+			</a></td>
 			</tr>
 		</tbody>
 	</table>
